--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/layout">
     <androidx.constraintlayout.widget.ConstraintLayout
 
             android:layout_width="match_parent"
@@ -9,23 +9,30 @@
             tools:context=".MainActivity">
         <ImageView
                 android:layout_width="0dp"
-                android:layout_height="wrap_content" app:srcCompat="@drawable/ClockMaster"
+                android:layout_height="0dp" app:srcCompat="@drawable/clock_master"
                 android:id="@+id/clockMaster"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="16dp"
-        />
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button_alarm"/>
         <Button
                 android:text="@string/alarm"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/button_alarm" android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/clockMaster" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_height="0dp"
+                android:id="@+id/button_alarm"
                 style="@style/whiteBox"
-        />
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/button" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent"/>
+        <Button
+                android:text="Button"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:id="@+id/button" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
