--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -8,5 +8,47 @@
             android:layout_height="match_parent"
             tools:context=".AlarmActivity">
 
+        <TextView
+                android:text="@string/set_alarm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/set_alarm" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                style="@style/whiteBox" android:textSize="30sp"
+        />
+        <Spinner
+                android:id="@+id/hours_spinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/minutes_spinner"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/set_alarm" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.26999998"
+                android:layout_marginStart="8dp"/>
+        <Spinner
+                android:id="@+id/minutes_spinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@+id/hours_spinner"
+                app:layout_constraintEnd_toStartOf="@+id/set_button" app:layout_constraintHorizontal_bias="0.5"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/set_alarm"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintVertical_bias="0.26999998" android:layout_marginEnd="8dp"/>
+        <Button
+                android:text="@string/set"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/set_button" app:layout_constraintStart_toEndOf="@+id/minutes_spinner"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/set_alarm" android:layout_marginBottom="8dp"
+                style="@style/whiteBox"
+                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="32dp"
+                app:layout_constraintVertical_bias="0.26"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
