--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
                 android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button_alarm"/>
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button_alarm"
+        />
         <Button
                 android:text="@string/alarm"
                 android:layout_width="wrap_content"
